--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:playwright": "playwright test"
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@playwright/test": "^1.40.1",
+    "@types/node": "^20.10.4",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
